# object_graspnet

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: cam_info.json
include/: data_preprocess.h  grasp_collision_detector.h  grasp_output_parser.h  graspnet_node.h
object_graspnet/: object_graspnet_node.py
object_graspnet/graspnet/: GraspGroup.py  __init__.py  collision_detector.py  pred_decode.py
src/: data_preprocess.cpp  grasp_collision_detector.cpp  grasp_output_parser.cpp  graspnet_node.cpp  main.cpp
